<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_buy_more">Buy more</string>

    <string name="category_name">Name</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_email">Supplier\'s e-mail</string>
    <string name="category_price">Price (R$)</string>
    <string name="category_measurement">Measurement</string>
    <string name="category_quantity">Amount</string>
    <string name="category_follow">Follow?</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_supplier">Name of supplier</string>
    <string name="hint_product_supplier_email">Supplier\'s e-mail</string>
    <string name="hint_product_quantity">Amount</string>
    <string name="hint_product_price">Price</string>

    <string name="buy_bulk">Buy Bulk</string>
    <string name="sell_bulk">Sell Bulk</string>
    <string name="sell">Sell</string>

    <string name="empty_image">No image selected!</string>
    <string name="image_not_found">Error loading image!</string>

    <string name="editor_stock_short">Stock cannot be below zero!</string>

    <!-- Texto do título para a view vazia, que descreve a imagem vazia da teia de aranha -->
    <string name="empty_view_title_text">It\'s a bit abandoned here...</string>

    <!-- Texto de legenda para a view vazia que solicita o usuário a adicionar um product -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_update_product_failed">Falha ao atualizar o Product</string>
    <string name="editor_update_product_successful">Product atualizado com sucesso!</string>
    <string name="editor_insert_product_failed">Falha ao incluir o Product</string>
    <string name="editor_insert_product_successful">Product incluído com sucesso!</string>

    <!-- Mensagem de dialog de quando o usuário está deixando o editor mas não salvou as
         alterações -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Texto de botão de dialog para a opção de descartar uma alteração do usuário -->
    <string name="discard">Discard</string>

    <!-- Texto de botão de dialog para a opção de continuar editando o product atual -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="list_delete_products_successful">All products deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="list_delete_products_failed">Error with deleting all products</string>
    <string name="editor_cannot_insert_blank_product">Cannot insert blank product!</string>
</resources>
